; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-typeck.c_valid_compound_expr_initializer.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-typeck.c_valid_compound_expr_initializer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COMPOUND_EXPR = common dso_local global i64 0, align 8
@error_mark_node = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @valid_compound_expr_initializer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @valid_compound_expr_initializer(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i64 @TREE_CODE(i64 %6)
  %8 = load i64, i64* @COMPOUND_EXPR, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %24

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  %12 = call i64 @TREE_OPERAND(i64 %11, i32 0)
  %13 = load i64, i64* %5, align 8
  %14 = call i64 @valid_compound_expr_initializer(i64 %12, i64 %13)
  %15 = load i64, i64* @error_mark_node, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %10
  %18 = load i64, i64* @error_mark_node, align 8
  store i64 %18, i64* %3, align 8
  br label %33

19:                                               ; preds = %10
  %20 = load i64, i64* %4, align 8
  %21 = call i64 @TREE_OPERAND(i64 %20, i32 1)
  %22 = load i64, i64* %5, align 8
  %23 = call i64 @valid_compound_expr_initializer(i64 %21, i64 %22)
  store i64 %23, i64* %3, align 8
  br label %33

24:                                               ; preds = %2
  %25 = load i64, i64* %4, align 8
  %26 = load i64, i64* %5, align 8
  %27 = call i32 @initializer_constant_valid_p(i64 %25, i64 %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %31, label %29

29:                                               ; preds = %24
  %30 = load i64, i64* @error_mark_node, align 8
  store i64 %30, i64* %3, align 8
  br label %33

31:                                               ; preds = %24
  %32 = load i64, i64* %4, align 8
  store i64 %32, i64* %3, align 8
  br label %33

33:                                               ; preds = %31, %29, %19, %17
  %34 = load i64, i64* %3, align 8
  ret i64 %34
}

declare dso_local i64 @TREE_CODE(i64) #1

declare dso_local i64 @TREE_OPERAND(i64, i32) #1

declare dso_local i32 @initializer_constant_valid_p(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
